k8s/ytdl-material/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ytdl-material
  namespace: media
spec:
  type: NodePort
  selector:
    app: ytdl-material
  ports:
    - name: http
      port: 80
      targetPort: 17442
      nodePort: 30368
